<resources>

    <!--    common-->
    <string name="app_name">Medicube</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>

    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="moto">Let\'s help each other..</string>
    <string name="sign_up">Sign Up</string>


    <string name="fname">First Name</string>
    <string name="enterfname">Enter Full Name</string>
    <string name="entermobile">Enter Mobile Number</string>
    <string name="exName">Full Name</string>
    <string name="exemail">exampleuseremail.com</string>

    <!-- bottum nav bar-->
    <string name="payment">Payment</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="password">Password:</string>
    <string name="dashboard">Dashboard</string>
    <string name="loading">Loading...</string>
    <string name="entercity">Enter your city</string>
    <string name="entercountry">Enter your country</string>

    <string name="feedAvailable">Available Medicines</string>
    <string name="feedContact_btn">Contact</string>
    <string name="feedMedicine_name_1">Acetazolamide Tablets</string>

    <string name="feedMedicine_weight_1">100 mg</string>
    <string name="feedMedicine_poster_1">A. B. C. Perera</string>
    <string name="feedMedicine_location_1">Toronto, Canada</string>
    <string name="feedMedicine_qty_1">2 Packs</string>
    <string name="feedMedicine_name_2">Amoxicillin Tablets</string>
    <string name="feedMedicine_weight_2">250 mg</string>
    <string name="feedMedicine_qty_2">3 Packs</string>
    <string name="feedMedicine_poster_2">Mahesh Silva</string>
    <string name="feedMedicine_location_2">London, UK</string>
    <string name="feedMedicine_name_3">Isoniazid Syrup</string>
    <string name="feedMedicine_weight_3">300 ml</string>
    <string name="feedMedicine_qty_3">3 bottles</string>
    <string name="feedMedicine_poster_3">Ihani Saumya</string>
    <string name="feedMedicine_location_3">Sydney, Australia</string>
    <string name="title_add_availableMedicine_1">Add Available</string>
    <string name="title_add_availableMedicine_2">Medicines</string>
    <string name="title_edit_availableMedicine_1">Edit Available</string>
    <string name="moto_addAvailable">Let\'s help each other.....</string>

    <string name="profile">Profile</string>

    <!-- placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medicine">Medicine</string>
    <string name="favorite">Favorites</string>
    <string name="need_medicine">Need medicines</string>
    <string name="pharmacy">Pharmacies</string>
    <string name="history">My History</string>
    <string name="home">Home</string>
    <string name="availablemedicine">Available Medicines</string>
    <string name="editprofile">Edit Profile</string>
    <string name="submit">Submit</string>
    <string name="deleteprofile">Delete Profile</string>
    <string name="avFeed_enter_medicineName">Enter Medicine Name</string>
    <string name="avFeed_enter_medicineQty">Enter Quantity you have</string>
    <string name="avFeed_enter_medicineWeight">Enter Medicine Weight</string>
    <string name="avFeed_enter_medicineDescription">Enter Medicine Description</string>
    <string name="addAvailable_btn_submit">SUBMIT</string>
    <string name="addAvailable_btn_cancel">CANCEL</string>
    <string name="addAvailable_btn_save">SAVE</string>
    <string name="tagline_editAvailable">Edit your entered details</string>
    <string name="title_userActivity">My Activity</string>
    <string name="myActivity_userName">Eehanee Saumya</string>
    <string name="myActivity_userLocation">Sydney, Australia</string>
    <string name="myActivity_userEmail">abc@gmail.com</string>
    <string name="avSummary_title_history">Summary</string>
    <string name="avSummary_title_main">Available Medicine</string>
    <string name="summary_btn_edit">Edit</string>
    <string name="summary_btn_delete">Delete</string>

</resources>