<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1DDEF"
    tools:context=".FeedAvailable">

    <TextView
        android:id="@+id/txt_feedAv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/feedAvailable"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CL_feed_plus_btn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/plus_btn_feed"
        app:layout_constraintBottom_toBottomOf="@+id/txt_feedAv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txt_feedAv_title"
        app:layout_constraintTop_toTopOf="@+id/txt_feedAv_title"
        app:layout_constraintVertical_bias="0.25">

        <ImageView
            android:id="@+id/img_plus_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_feedAv_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/CL_Feed_tile"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/available_feed_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_feedAv_title">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/profile" />

                <TextView
                    android:id="@+id/txt_feed_mName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/feedMedicine_name_3"
                    android:textColor="@color/feedMedicineName"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="@+id/imageView6" />

                <TextView
                    android:id="@+id/txt_feed_mWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/feedMedicine_weight_3"
                    android:textColor="@color/feedMedicineWeight"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_feed_mName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/txt_feed_mName"
                    app:layout_constraintTop_toTopOf="@+id/txt_feed_mName"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/txt_feed_mQty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/feedMedicine_qty_3"
                    android:textColor="@color/feedMedicineQty"
                    app:layout_constraintStart_toStartOf="@+id/txt_feed_mName"
                    app:layout_constraintTop_toBottomOf="@+id/txt_feed_mName" />

                <TextView
                    android:id="@+id/txt_feed_mUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/feedMedicine_poster_3"
                    android:textColor="@color/feedUserDetails"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" />

                <TextView
                    android:id="@+id/txt_feed_mLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/feedMedicine_location_3"
                    android:textColor="@color/feedUserDetails"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/txt_feed_mUser"
                    app:layout_constraintTop_toBottomOf="@+id/txt_feed_mUser" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/CL_feed_btn_contact"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/contact_btn_feed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/txt_feed_mWeight">

                    <TextView
                        android:id="@+id/textView103"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feedContact_btn"
                        android:textColor="@color/purple_700"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/available_feed_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/profile" />

                <TextView
                    android:id="@+id/textView59"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/feedMedicine_name_3"
                    android:textColor="@color/feedMedicineName"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="@+id/imageView8" />

                <TextView
                    android:id="@+id/textView60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/feedMedicine_weight_3"
                    android:textColor="@color/feedMedicineWeight"
                    app:layout_constraintBottom_toBottomOf="@+id/textView59"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView59"
                    app:layout_constraintTop_toTopOf="@+id/textView59"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/feedMedicine_qty_3"
                    android:textColor="@color/feedMedicineQty"
                    app:layout_constraintStart_toStartOf="@+id/textView59"
                    app:layout_constraintTop_toBottomOf="@+id/textView59" />

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/feedMedicine_poster_3"
                    android:textColor="@color/feedUserDetails"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/imageView8"
                    app:layout_constraintTop_toBottomOf="@+id/imageView8" />

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/feedMedicine_location_3"
                    android:textColor="@color/feedUserDetails"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView43"
                    app:layout_constraintTop_toBottomOf="@+id/textView43" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/contact_btn_feed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView60">

                    <TextView
                        android:id="@+id/textView45"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feedContact_btn"
                        android:textColor="@color/purple_700"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottumNavigationView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/bottom_nav_background"
        app:itemIconTint="@drawable/bottom_nav_colors"
        app:itemTextColor="@drawable/bottom_nav_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:menu="@menu/bottum_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>